[gd_scene load_steps=12 format=3 uid="uid://fpfsb5iaspct"]

[ext_resource type="Script" path="res://scripts/paper.gd" id="1_egbg8"]
[ext_resource type="Texture2D" uid="uid://b0gq5may5w8r" path="res://sprites/PaperSheet.png" id="2_c0d62"]
[ext_resource type="FontFile" uid="uid://2tj0hw33h0hn" path="res://sprites/PixelOperator8-Bold.ttf" id="3_uac2v"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ujldu"]
size = Vector2(112, 45)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lx8x4"]
size = Vector2(217, 269)

[sub_resource type="Animation" id="Animation_tjwvv"]
resource_name = "shred"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Paper:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 159)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Paper/Draggable")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Paper/StampArea")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.8),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="Animation" id="Animation_njrfr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Paper:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Paper:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1.3875, 1.3875)]
}

[sub_resource type="Animation" id="Animation_epb7k"]
resource_name = "tray"
length = 0.5
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Paper/Draggable")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Paper/StampArea")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Paper:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 134)]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="Animation" id="Animation_1ac56"]
resource_name = "new_animation"
length = 0.7
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Paper/Draggable")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Paper:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -480)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.7),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="Animation" id="Animation_a7blu"]
resource_name = "spawn"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Paper:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1.3875, 1.3875), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2pti7"]
_data = {
"RESET": SubResource("Animation_njrfr"),
"new_animation": SubResource("Animation_1ac56"),
"shred": SubResource("Animation_tjwvv"),
"spawn": SubResource("Animation_a7blu"),
"tray": SubResource("Animation_epb7k")
}

[node name="Paper" type="Area2D"]
script = ExtResource("1_egbg8")

[node name="Paper" type="Sprite2D" parent="."]
scale = Vector2(1.3875, 1.3875)
texture = ExtResource("2_c0d62")
region_enabled = true
region_rect = Rect2(0, 0, 240, 289)

[node name="Draggable" type="Button" parent="Paper"]
self_modulate = Color(1, 1, 1, 0)
offset_left = -120.36
offset_top = -144.865
offset_right = 119.64
offset_bottom = 145.135

[node name="Label" type="Label" parent="Paper"]
offset_left = -91.0
offset_top = -32.0
offset_right = -51.0
offset_bottom = -9.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_uac2v")
theme_override_font_sizes/font_size = 8
text = "\"Eat yummy food and sleep\"

"

[node name="StampMarker" type="Marker2D" parent="Paper"]
position = Vector2(0, -86)

[node name="StampArea" type="Area2D" parent="Paper"]
position = Vector2(0, 159)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Paper/StampArea"]
position = Vector2(0, -246)
shape = SubResource("RectangleShape2D_ujldu")

[node name="Hitbox" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 1)
shape = SubResource("RectangleShape2D_lx8x4")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_2pti7")
}
autoplay = "spawn"

[connection signal="button_down" from="Paper/Draggable" to="." method="_on_draggable_button_down"]
[connection signal="button_up" from="Paper/Draggable" to="." method="_on_draggable_button_up"]
